# simple-lib-static

./: CMakeLists.txt
include/: simple.hpp
src/: main.cpp  simple.cpp
